@@ -49,66 +49,4 @@
             <artifactId>metainf-services</artifactId>
         </dependency>
     </dependencies>
-
-    <profiles>
-        <profile>
-            <id>release-profile</id>
-            <activation>
-                <property>
-                    <name>performRelease</name>
-                    <value>true</value>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>errorprone-and-nullaway</id>
-                                <goals>
-                                    <goal>compile</goal>
-                                </goals>
-                                <phase>test</phase>
-                                <configuration>
-                                    <failOnWarning>true</failOnWarning>
-                                    <compilerArgs>
-                                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
-                                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
-                                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
-                                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
-                                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
-                                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-                                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-                                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-                                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-                                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
-                                        <arg>-XDcompilePolicy=simple</arg>
-                                        <arg>-Xplugin:ErrorProne -Xep:MissingSummary:OFF -XepOpt:NullAway:JSpecifyMode -XepOpt:NullAway:AnnotatedPackages=dev.bannmann.mandor.core -Xep:VoidUsed:OFF</arg>
-                                    </compilerArgs>
-                                    <annotationProcessorPaths>
-                                        <path>
-                                            <groupId>org.projectlombok</groupId>
-                                            <artifactId>lombok</artifactId>
-                                            <version>${lombok.core.version}</version>
-                                        </path>
-                                        <path>
-                                            <groupId>com.google.errorprone</groupId>
-                                            <artifactId>error_prone_core</artifactId>
-                                            <version>${error_prone.version}</version>
-                                        </path>
-                                        <path>
-                                            <groupId>com.uber.nullaway</groupId>
-                                            <artifactId>nullaway</artifactId>
-                                            <version>${nullaway.version}</version>
-                                        </path>
-                                    </annotationProcessorPaths>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 </project>
